<resources>
    <string name="app_name">TP01</string>
    <string name="action_settings">Settings</string>
    <string name="logo">INSAT LOGO</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Souvenir">Se Souvenir De Moi</string>
    <string name="login">Se Connecter</string>
    <string name="chooseImage"></string>
    <string name="go_to_img">Go To Image Activity</string>
    <string name="bienveue">Welcome</string>


</resources>