<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#ffffff"
    android:fitsSystemWindows="true"
    android:foregroundTint="#00C33E3E"
    android:orientation="vertical"
    android:textAlignment="viewStart"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8EDEB"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="#000000"
        app:title="TP1"
        app:titleCentered="false"
        app:titleTextColor="#000000" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/insat_logo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#fae1dd"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textColorHighlight="#F8EDEB"
        android:textColorHint="#FFA8A3A3"
        android:textColorLink="#F8EDEB"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#fae1dd"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textColorHighlight="#F8EDEB"
        android:textColorHint="#A8A3A3"
        android:textColorLink="#F8EDEB"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginTop="10dp"
        android:buttonTint="#fae1dd"
        android:focusable="auto"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/Souvenir"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cnxbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#D6CECE"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="#F8EDEB"
        app:iconTint="#F8EDEB"
        app:strokeColor="#F8EDEB"
        app:strokeWidth="2dp" />
    />


</LinearLayout>